# fractalio

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  xstigl00.txt
configurations/: serpinski.fio
doc/final/: doc.typ
fio/: README.md  bjulia.fio  julia.fio  mandelbrot.fio
src/: commander.cpp  commander.hpp  df_shader_program.cpp  df_shader_program.hpp  drag_listener.hpp  font.cpp  font.hpp  fractal.hpp  fractalio.cpp  fractalio.hpp  gl.hpp  glad.hpp  gradient.cpp  gradient.hpp  help.cpp  help.hpp  log_err.hpp  main.cpp  make_deleter.hpp  maps.hpp  par_picker.hpp  shader.frag  shader.vert
src/app/: commander.cpp  commander.hpp  fractalio.cpp  fractalio.hpp  maps.hpp
src/burning_ship/: burning_ship.cpp  burning_ship.hpp  shader.frag
src/cli/: args.cpp  args.hpp
src/complex_fractal/: complex_fractal.cpp  complex_fractal.hpp
src/draw_tex/: draw_tex.cpp  draw_tex.hpp  shader.vert
src/fc/: config.hpp  font_set.hpp  object_set.hpp  pattern.hpp
src/fractals/: burning_julia.cpp  burning_julia.frag  burning_julia.hpp  burning_ship.cpp  burning_ship.frag  burning_ship.hpp  chaotic_fractal.hpp  complex_fractal.hpp  double_pendulum.cpp  double_pendulum.frag  double_pendulum.hpp  fractal.hpp  gravity_basins.cpp  gravity_basins.frag  gravity_basins.hpp  help.cpp  help.hpp  iterative_fractal.hpp  julia.cpp  julia.frag  julia.hpp  littlewood.cpp  littlewood.frag  littlewood.geom  littlewood.hpp  littlewood.vert  mandelbrot.cpp  mandelbrot.frag  mandelbrot.hpp  newton.cpp  newton.frag  newton.hpp  pendulum.cpp  pendulum.frag  pendulum.hpp  powerbrot.cpp  powerbrot.frag  powerbrot.hpp  space_fractal.hpp  three_body.cpp  (+2 more)
src/ft/: check_error.hpp  face.hpp  font.cpp  font.hpp  library.hpp
src/gl/: buffer.hpp  df_shader_program.cpp  df_shader_program.hpp  framebuffer.hpp  gl.hpp  process_defines.cpp  program.hpp  (+5 more)
(+55 files in other folders)
